<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearlayout_settings"
              android:layout_marginTop="80dp"
              android:visibility="gone"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/warning_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <SeekBar
            android:id="@+id/seekbar_warning_light"
            android:max="2000"
            android:progress="400"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/police_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/fast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <SeekBar
            android:id="@+id/seekbar_police_light"
            android:max="2000"
            android:progress="400"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
        android:id="@+id/button_add_shortcut"
        android:layout_marginTop="15dp"
        android:text="@string/add_shortcut"
        android:onClick="onClick_AddShortcut"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_delete_shortcut"
        android:layout_marginTop="15dp"
        android:text="@string/delete_shortcut"
        android:onClick="onClick_RemoveShortcut"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
